--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
 **sublime**
 *.pyc
-dist
+dist/
 *.egg-info
-dist
 MANIFEST
-build
-.eggs
-.coverage
+build/
+.eggs/
+.coverage/
 .vscode/
-env
+env/
+venv/
 flake8.out
 pylint.out
 posthog-analytics
 .idea
-
