--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,16 +45,19 @@ jobs:
     tests:
         name: Python tests
         runs-on: ubuntu-latest
+        strategy:
+          matrix:
+            python-version: [ "3.7", "3.8", "3.9", "3.10", "3.11" ]
 
         steps:
             - uses: actions/checkout@v3
               with:
                   fetch-depth: 1
 
-            - name: Set up Python 3.7
+            - name: Set up Python ${{ matrix.python-version }}
               uses: actions/setup-python@v4
               with:
-                  python-version: 3.7
+                  python-version: ${{ matrix.python-version }}
 
             - name: Install requirements.txt dependencies with pip
               run: |
