--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,13 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
 
+            - uses: actions/cache@v3
+              with:
+                path: ~/.cache/pip
+                key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}-${{ matrix.python-version }}
+                restore-keys: |
+                  ${{ runner.os }}-pip-
+
             - name: Install requirements.txt dependencies with pip
               run: |
                   python -m pip install -e .[test]
