--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
                   python-version: 3.8
 
             - uses: actions/cache@v1
+              id: cache
               with:
                   path: ~/.cache/pip
                   key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
@@ -52,7 +53,7 @@ jobs:
                   fetch-depth: 1
 
             - name: Set up Python 3.7
-              uses: actions/setup-python@v1
+              uses: actions/setup-python@v2
               with:
                   python-version: 3.7
 
