--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
                   python-version: 3.8
 
             - uses: actions/cache@v3
-              id: cache
+              id: pip-cache
               with:
                   path: ~/.cache/pip
                   key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
@@ -29,7 +29,7 @@ jobs:
             - name: Install dev dependencies
               run: |
                   python -m pip install -e .[dev]
-              if: steps.cache.outputs.cache-hit != 'true'
+              if: steps.pip-cache.outputs.cache-hit != 'true'
 
             - name: Check formatting with black
               run: |
