--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,6 @@ jobs:
                   python-version: 3.8
 
             - uses: actions/cache@v3
-              id: pip-cache
               with:
                   path: ~/.cache/pip
                   key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
@@ -29,7 +28,7 @@ jobs:
             - name: Install dev dependencies
               run: |
                   python -m pip install -e .[dev]
-              if: steps.pip-cache.outputs.cache-hit != 'true'
+              if: steps.cache.outputs.cache-hit != 'true'
 
             - name: Check formatting with black
               run: |
@@ -48,7 +47,7 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: actions/checkout@v1
+            - uses: actions/checkout@v2
               with:
                   fetch-depth: 1
 
