--- a/mypy.ini
+++ b/mypy.ini
@@ -2,9 +2,9 @@
 python_version = 3.11
 warn_return_any = True
 warn_unused_configs = True
-disallow_untyped_defs = False
-disallow_incomplete_defs = False
-check_untyped_defs = False
+disallow_untyped_defs = True
+disallow_incomplete_defs = True
+check_untyped_defs = True
 disallow_untyped_decorators = True
 no_implicit_optional = True
 warn_redundant_casts = True
