Ignore more imports

--- a/mypy.ini
+++ b/mypy.ini
@@ -27,3 +27,18 @@ ignore_errors = True
 
 [mypy-posthog.*.test.*]
 ignore_errors = True
+
+[mypy-openai.*]
+ignore_missing_imports = True
+
+[mypy-langchain.*]
+ignore_missing_imports = True
+
+[mypy-langchain_core.*]
+ignore_missing_imports = True
+
+[mypy-anthropic.*]
+ignore_missing_imports = True
+
+[mypy-pydantic.*]
+ignore_missing_imports = True
