Look at mypy.ini in posthog/posthog
Adapted some changes from there.

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,16 +1,14 @@
 [mypy]
 python_version = 3.11
-warn_return_any = True
-warn_unused_configs = True
-disallow_untyped_defs = True
-disallow_incomplete_defs = True
-check_untyped_defs = True
-disallow_untyped_decorators = True
+plugins =
+    pydantic.mypy
+strict_optional = True
 no_implicit_optional = True
-warn_redundant_casts = True
 warn_unused_ignores = True
-warn_no_return = True
+check_untyped_defs = True
 warn_unreachable = True
+strict_equality = True
+ignore_missing_imports = True
 
 [mypy-django.*]
 ignore_missing_imports = True
