--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
               with:
                   fetch-depth: 1
 
-            - name: Set up Python 3.14
+            - name: Set up Python 3.13
               uses: actions/setup-python@v2
               with:
-                  python-version: 3.14
+                  python-version: "3.13"
 
             - uses: actions/cache@v3
               with:
@@ -51,7 +51,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python-version: ['3.9', '3.10', '3.11', '3.12', '3.13', '3.14']
+                python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
 
         steps:
             - uses: actions/checkout@v2
