--- a/mypy.ini
+++ b/mypy.ini
@@ -9,6 +9,7 @@ check_untyped_defs = True
 warn_unreachable = True
 strict_equality = True
 ignore_missing_imports = True
+exclude = env/.*|venv/.*
 
 [mypy-django.*]
 ignore_missing_imports = True
