--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
             - uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684
               with:
                   path: ~/.cache/pip
-                  key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
+                  key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml') }}
                   restore-keys: |
                       ${{ runner.os }}-pip-
 
