--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,7 +29,7 @@ jobs:
         run: echo "REPO_VERSION=$(python3 posthog/version.py)" >> $GITHUB_ENV
 
       - name: Prepare for building release
-        run: pip install -U pip setuptools wheel twine
+        run: pip install -U pip setuptools packaging wheel twine
 
       - name: Push release to PyPI
         run: make release && make release_analytics
