--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
 Homepage = "https://github.com/posthog/posthog-python"
 Repository = "https://github.com/posthog/posthog-python"
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
     "django-stubs",
     "lxml",
@@ -68,6 +68,8 @@ test = [
     "pydantic",
     "parameterized>=0.8.1",
 ]
+
+[project.optional-dependencies]
 sentry = ["sentry-sdk", "django"]
 langchain = ["langchain>=0.2.0"]
 
