--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
             - name: Install dev dependencies
               shell: bash
               run: |
-                  UV_PROJECT_ENVIRONMENT=$pythonLocation uv sync --dev
+                  UV_PROJECT_ENVIRONMENT=$pythonLocation uv sync --group dev
 
             - name: Check formatting with ruff
               run: |
