--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,7 +37,7 @@ jobs:
         run: echo "REPO_VERSION=$(python3 posthog/version.py)" >> $GITHUB_ENV
 
       - name: Prepare for building release
-        run: uv sync --group build
+        run: uv sync --extra build
 
       - name: Push release to PyPI
         run: make release && make release_analytics
