--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
             - name: Install dev dependencies
               shell: bash
               run: |
-                  UV_PROJECT_ENVIRONMENT=$pythonLocation uv sync --group dev
+                  UV_PROJECT_ENVIRONMENT=$pythonLocation uv sync --extra dev
 
             - name: Check formatting with ruff
               run: |
@@ -63,7 +63,7 @@ jobs:
             - name: Install test dependencies
               shell: bash
               run: |
-                  UV_PROJECT_ENVIRONMENT=$pythonLocation uv sync --group test
+                  UV_PROJECT_ENVIRONMENT=$pythonLocation uv sync --extra test
 
             - name: Run posthog tests
               run: |
