--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,7 +37,7 @@ jobs:
         run: echo "REPO_VERSION=$(python3 posthog/version.py)" >> $GITHUB_ENV
 
       - name: Prepare for building release
-        run: uv sync --extra build
+        run: uv sync --extra dev
 
       - name: Push releases to PyPI
         run: uv run make release && uv run make release_analytics
