--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "python-dateutil>=2.2",
     "backoff>=1.10.0",
     "distro>=1.5.0",
+    "typing-extensions>=4.2.0",
 ]
 
 [project.urls]
