add minimum repro case

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,3 +96,9 @@ version = { attr = "posthog.version.VERSION" }
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
+
+[dependency-groups]
+dev = [
+    "fastapi>=0.115.14",
+    "uvicorn[standard]>=0.35.0",
+]
