--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,3 +96,5 @@ version = { attr = "posthog.version.VERSION" }
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
+# Exclude manual integration tests that require external dependencies
+norecursedirs = ["posthog/test/manual_integration"]
