--- a/.github/workflows/generate-references.yaml
+++ b/.github/workflows/generate-references.yaml
@@ -9,6 +9,8 @@ on:
 jobs:
   docs-generation:
     name: Generate references
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
