--- a/test_project_django5/pyproject.toml
+++ b/test_project_django5/pyproject.toml
@@ -6,6 +6,9 @@ dependencies = [
     "django>=5.0",
     "uvicorn[standard]",
     "posthog",
+    "pytest>=8.0",
+    "pytest-asyncio>=0.23",
+    "httpx>=0.27",
 ]
 
 [tool.uv.sources]
