--- a/test_project_django5/pyproject.toml
+++ b/test_project_django5/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "posthog",
     "pytest>=8.0",
     "pytest-asyncio>=0.23",
+    "pytest-django>=4.0",
     "httpx>=0.27",
 ]
 
