fix: address CI failures and code review comments
- Add permissions: contents: read to CI workflow (security best practice)
- Exclude test_project_django5 from main pytest run to avoid name collision
- Fix ruff E712: use truth check instead of == True
- Add noqa: E402 for unavoidable Django setup imports
- Configure testpaths to only run posthog/test in main CI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,3 +96,5 @@ version = { attr = "posthog.version.VERSION" }
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
+testpaths = ["posthog/test"]
+norecursedirs = ["test_project_django5"]
