--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,4 +97,4 @@ version = { attr = "posthog.version.VERSION" }
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
 testpaths = ["posthog/test"]
-norecursedirs = ["test_project_django5"]
+norecursedirs = ["integration_tests"]
