fix: update editable posthog path in django5 integration tests

--- a/integration_tests/django5/pyproject.toml
+++ b/integration_tests/django5/pyproject.toml
@@ -16,4 +16,4 @@ dependencies = [
 required-version = ">=0.5"
 
 [tool.uv.sources]
-posthog = { path = "..", editable = true }
+posthog = { path = "../..", editable = true }
