chore: update LLM SDKs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,13 @@ authors = [{ name = "PostHog", email = "hey@posthog.com" }]
 maintainers = [{ name = "PostHog", email = "hey@posthog.com" }]
 license = { text = "MIT" }
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
     "Operating System :: OS Independent",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -66,13 +65,13 @@ test = [
     "pytest-timeout",
     "pytest-asyncio",
     "django",
-    "openai",
-    "anthropic",
-    "langgraph>=0.4.8",
-    "langchain-core>=0.3.65",
-    "langchain-community>=0.3.25",
-    "langchain-openai>=0.3.22",
-    "langchain-anthropic>=0.3.15",
+    "openai>=2.0",
+    "anthropic>=0.72",
+    "langgraph>=1.0",
+    "langchain-core>=1.0",
+    "langchain-community>=0.4",
+    "langchain-openai>=1.0",
+    "langchain-anthropic>=1.0",
     "google-genai",
     "pydantic",
     "parameterized>=0.8.1",
