--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
 ]
 dependencies = [
     "requests>=2.7,<3.0",
@@ -48,7 +49,7 @@ dev = [
     "types-setuptools",
     "types-six",
     "pre-commit",
-    "pydantic",
+    "pydantic>=2.12",
     "ruff",
     "setuptools",
     "packaging",
@@ -73,7 +74,7 @@ test = [
     "langchain-openai>=1.0",
     "langchain-anthropic>=1.0",
     "google-genai",
-    "pydantic",
+    "pydantic>=2.12",
     "parameterized>=0.8.1",
 ]
 
