revert: python 3.14 support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,6 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
-    "Programming Language :: Python :: 3.14",
 ]
 dependencies = [
     "requests>=2.7,<3.0",
@@ -49,7 +48,7 @@ dev = [
     "types-setuptools",
     "types-six",
     "pre-commit",
-    "pydantic>=2.12",
+    "pydantic",
     "ruff",
     "setuptools",
     "packaging",
@@ -74,7 +73,7 @@ test = [
     "langchain-openai>=1.0",
     "langchain-anthropic>=1.0",
     "google-genai",
-    "pydantic>=2.12",
+    "pydantic",
     "parameterized>=0.8.1",
 ]
 
