--- a/.github/workflows/sdk-compliance.yml
+++ b/.github/workflows/sdk-compliance.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   compliance:
     name: PostHog SDK compliance tests
-    uses: PostHog/posthog-sdk-test-harness/.github/workflows/test-sdk-action.yml@v0.1
+    uses: PostHog/posthog-sdk-test-harness/.github/workflows/test-sdk-action.yml@main
     with:
       adapter-dockerfile: "Dockerfile"
       adapter-context: "sdk_compliance_adapter"
