--- a/sdk_compliance_adapter/Dockerfile
+++ b/sdk_compliance_adapter/Dockerfile
@@ -2,8 +2,9 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-# Copy the SDK source code
-COPY . /app/sdk
+# Copy the SDK source code (everything except sdk_compliance_adapter)
+COPY posthog/ /app/sdk/posthog/
+COPY setup.py pyproject.toml README.md LICENSE /app/sdk/
 
 # Install the SDK from source
 RUN cd /app/sdk && pip install --no-cache-dir -e .
@@ -16,11 +17,6 @@ COPY sdk_compliance_adapter/adapter.py /app/adapter.py
 
 # Expose port 8080
 EXPOSE 8080
-
-# Set environment variables (will be overridden by docker run)
-ENV POSTHOG_HOST=http://localhost:8080
-ENV POSTHOG_API_KEY=test_key
-ENV PORT=8080
 
 # Run the adapter
 CMD ["python", "/app/adapter.py"]
