--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,10 +44,12 @@ jobs:
         run: uv run make release && uv run make release_analytics
 
       - name: Create GitHub release
-        uses: actions/create-release@0cb9c9b65d5d1901c1f53e5e66eaf4afd303e70e # v1
-        with:
-          tag_name: v${{ env.REPO_VERSION }}
-          release_name: ${{ env.REPO_VERSION }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create "v${{ env.REPO_VERSION }}" \
+            --title "${{ env.REPO_VERSION }}" \
+            --generate-notes
       
       - name: Dispatch generate-references for posthog-python
         env:
