--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,9 +84,12 @@ packages = [
     "posthog.ai",
     "posthog.ai.langchain",
     "posthog.ai.openai",
+    "posthog.ai.openai_agents",
     "posthog.ai.anthropic",
     "posthog.ai.gemini",
     "posthog.test",
+    "posthog.test.ai",
+    "posthog.test.ai.openai_agents",
     "posthog.integrations",
 ]
 
