chore: Update  to relase Python via Slack + sampo

--- a/.sampo/config.toml
+++ b/.sampo/config.toml
@@ -3,6 +3,7 @@ version = 1
 
 [git]
 default_branch = "master"
+short_tags = "posthog"    # Tag with v1.2.3 rather than posthog-v1.2.3
 
 [github]
 repository = "posthog/posthog-python"
