chore: Migrate releases to `sampo` (#398)
* chore: Migrate releases to `sampo`

This is much closer to what we have in `posthog-js`, let's see if it's a good thing!

There's still a lot to do before deploying this:
- updating CI
- updating README with instructions

* Add sampo changeset

* chore: Update  to relase Python via Slack + sampo

* Update release.yml

* fix: Use pyproject.toml version as source of truth

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "posthog"
-dynamic = ["version"]
+version = "7.9.1"
 description = "Integrate PostHog into any python application."
 authors = [{ name = "PostHog", email = "hey@posthog.com" }]
 maintainers = [{ name = "PostHog", email = "hey@posthog.com" }]
@@ -92,9 +92,6 @@ packages = [
     "posthog.test.ai.openai_agents",
     "posthog.integrations",
 ]
-
-[tool.setuptools.dynamic]
-version = { attr = "posthog.version.VERSION" }
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
